<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.timespenttracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_day"
        android:name="com.example.timespenttracker.ui.day.DayFragment"
        android:label="@string/menu_day"
        tools:layout="@layout/fragment_day" />

    <fragment
        android:id="@+id/nav_week"
        android:name="com.example.timespenttracker.ui.week.WeekFragment"
        android:label="@string/menu_week"
        tools:layout="@layout/fragment_week" />

    <fragment
        android:id="@+id/nav_month"
        android:name="com.example.timespenttracker.ui.month.MonthFragment"
        android:label="@string/menu_month"
        tools:layout="@layout/fragment_month" />
</navigation>