<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.appDetails.AppDetailsActivity">
    <data>
        <variable
            name="viewModel"
            type="com.example.timespenttracker.activity.appDetails.AppDetailsViewModel"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_appDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:theme="@style/AppTheme.AppBarOverlay">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_appDetails"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>
        </com.google.android.material.appbar.AppBarLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/app_icon"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_centerHorizontal="true"
                        android:src="@{viewModel.appIcon}"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:paddingHorizontal="8dp"
                    android:text="@string/text_last_7_days"/>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="6dp"
                    app:cardUseCompatPadding="true">
                    <LinearLayout
                        android:orientation="vertical"
                        android:padding="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="@string/text_usage_per_day"
                                style="@style/normal_text"/>
                            <TextView
                                android:layout_alignParentEnd="true"
                                android:id="@+id/usageThisDay"
                                android:text="@{viewModel.usageThisDay.usageInHMSFormat}"
                                style="@style/normal_text"/>
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="@string/text_average_usage"
                                style="@style/normal_text"/>
                            <TextView
                                android:layout_alignParentEnd="true"
                                android:id="@+id/avgUsagePerDay"
                                android:text="@{viewModel.avgUsageDay.usageInHMSFormat}"
                                style="@style/normal_text"/>
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp">
                            <TextView
                                android:text="@string/text_launches_today"
                                style="@style/normal_text"/>
                            <TextView
                                android:layout_alignParentEnd="true"
                                android:id="@+id/visitsThisDay"
                                android:text="@{String.valueOf(viewModel.usageThisDay.launches)}"
                                style="@style/normal_text"/>
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="@string/text_average_launches"
                                style="@style/normal_text"/>
                            <TextView
                                android:layout_alignParentEnd="true"
                                android:id="@+id/avgVisitsPerDay"
                                android:text="@{String.valueOf(viewModel.avgUsageDay.launches)}"
                                style="@style/normal_text"/>
                        </RelativeLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:paddingHorizontal="8dp"
                    android:text="@string/text_last_4_weeks"/>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="6dp"
                    app:cardUseCompatPadding="true">
                    <LinearLayout
                        android:orientation="vertical"
                        android:padding="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="@string/text_usage_per_week"
                                style="@style/normal_text"/>
                            <TextView
                                android:layout_alignParentEnd="true"
                                android:id="@+id/usageThisWeek"
                                android:text="@{viewModel.usageThisWeek.usageInHMSFormat}"
                                style="@style/normal_text"/>
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="@string/text_average_usage"
                                style="@style/normal_text"/>
                            <TextView
                                android:layout_alignParentEnd="true"
                                android:id="@+id/avgUsagePerWeek"
                                android:text="@{viewModel.avgUsageWeek.usageInHMSFormat}"
                                style="@style/normal_text"/>
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp">
                            <TextView
                                android:text="@string/text_launches_per_week"
                                style="@style/normal_text"/>
                            <TextView
                                android:layout_alignParentEnd="true"
                                android:id="@+id/visitsThisWeek"
                                android:text="@{String.valueOf(viewModel.usageThisWeek.launches)}"
                                style="@style/normal_text"/>
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="@string/text_average_launches"
                                style="@style/normal_text"/>
                            <TextView
                                android:layout_alignParentEnd="true"
                                android:id="@+id/avgVisitsPerWeek"
                                android:text="@{String.valueOf(viewModel.avgUsageWeek.launches)}"
                                style="@style/normal_text"/>
                        </RelativeLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:paddingHorizontal="8dp"
                    android:text="@string/text_last_3_months"/>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="6dp"
                    app:cardUseCompatPadding="true">
                    <LinearLayout
                        android:orientation="vertical"
                        android:padding="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="@string/text_usage_per_month"
                                style="@style/normal_text"/>
                            <TextView
                                android:layout_alignParentEnd="true"
                                android:id="@+id/usageThisMonth"
                                android:text="@{viewModel.usageThisMonth.usageInHMSFormat}"
                                style="@style/normal_text"/>
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="@string/text_average_usage"
                                style="@style/normal_text"/>
                            <TextView
                                android:layout_alignParentEnd="true"
                                android:id="@+id/avgUsagePerMonth"
                                android:text="@{viewModel.avgUsageMonth.usageInHMSFormat}"
                                style="@style/normal_text"/>
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp">
                            <TextView
                                android:text="@string/text_launches_per_month"
                                style="@style/normal_text"/>
                            <TextView
                                android:layout_alignParentEnd="true"
                                android:id="@+id/visitsThisMonth"
                                android:text="@{String.valueOf(viewModel.usageThisMonth.launches)}"
                                style="@style/normal_text"/>
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="@string/text_average_launches"
                                style="@style/normal_text"/>
                            <TextView
                                android:layout_alignParentEnd="true"
                                android:id="@+id/avgVisitsPerMonth"
                                android:text="@{String.valueOf(viewModel.avgUsageMonth.launches)}"
                                style="@style/normal_text"/>
                        </RelativeLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="6dp"
                    app:cardUseCompatPadding="true">
                    <LinearLayout
                        android:orientation="vertical"
                        android:paddingTop="16dp"
                        android:paddingBottom="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp">
                        <TextView
                            android:textStyle="bold"
                            android:text="@string/hourly_usage"
                            style="@style/normal_text"/>
                        <com.github.mikephil.charting.charts.BarChart
                            android:id="@+id/barChartToday"
                            android:padding="8dp"
                            android:clickable="false"
                            android:layout_width="match_parent"
                            android:layout_height="196dp"
                            app:setTodayBarChartData="@{viewModel.appUsageToday}"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="6dp"
                    app:cardUseCompatPadding="true">
                    <LinearLayout
                        android:orientation="vertical"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp">
                        <TextView
                            android:textStyle="bold"
                            android:text="@string/daily_use_for_7days"
                            style="@style/normal_text"/>
                        <com.github.mikephil.charting.charts.BarChart
                            android:id="@+id/barChartWeek"
                            android:padding="8dp"
                            android:clickable="false"
                            android:layout_width="match_parent"
                            android:layout_height="196dp"
                            app:setWeekBarChartData="@{viewModel.appUsage7Days}"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>