<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.HomeFragment">
    <data>
        <variable
            name="viewModel"
            type="com.example.timespenttracker.ui.home.HomeViewModel"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/usageTimeChar"
                        android:layout_width="400dp"
                        android:layout_height="300dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_centerHorizontal="true"
                        app:setTodayPieChartData="@{viewModel.todayPieChartData}"/>
                </RelativeLayout>
                <LinearLayout
                    android:id="@+id/appRanking"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:baselineAligned="false">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <LinearLayout
                            android:gravity="center_horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_width="45dp"
                                android:layout_height="45dp"
                                android:layout_margin="5dp"
                                android:src="@{viewModel.mostUsedApp.appIcon}"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center_horizontal">
                            <TextView
                                android:ellipsize="end"
                                style="@style/normal_text"
                                android:text="@{viewModel.mostUsedApp.appName}"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/mostUsedApp" />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <LinearLayout
                            android:gravity="center_horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_width="45dp"
                                android:layout_height="45dp"
                                android:layout_margin="5dp"
                                android:src="@{viewModel.mostVisitedApp.appIcon}"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center_horizontal">
                            <TextView
                                android:text="@{viewModel.mostVisitedApp.appName}"
                                android:ellipsize="end"
                                style="@style/normal_text"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/mostLaunchedApp"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp"
                app:cardUseCompatPadding="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/text_last_7_days"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:text="@string/text_usage_today"
                            android:layout_alignParentStart="true"
                            style="@style/normal_text" />
                        <TextView
                            android:layout_alignParentEnd="true"
                            android:paddingStart="8dp"
                            style="@style/normal_text"
                            android:text="@{viewModel.usageThisDay.usageInHMSFormat}"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/text_average_usage"
                            android:layout_alignParentStart="true"
                            style="@style/normal_text"/>
                        <TextView
                            android:layout_alignParentEnd="true"
                            android:paddingStart="8dp"
                            style="@style/normal_text"
                            android:text="@{viewModel.avgUsageDay.usageInHMSFormat}"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">
                        <TextView
                            android:text="@string/today_apps_launches"
                            style="@style/normal_text"/>
                        <TextView
                            android:layout_alignParentEnd="true"
                            android:paddingStart="8dp"
                            style="@style/normal_text"
                            android:text="@{String.valueOf(viewModel.usageThisDay.launches)}"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/avg_apps_launches"
                            style="@style/normal_text"/>
                        <TextView
                            android:layout_alignParentEnd="true"
                            android:paddingStart="8dp"
                            style="@style/normal_text"
                            android:text="@{String.valueOf(viewModel.avgUsageDay.launches)}"/>
                    </RelativeLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp"
                app:cardUseCompatPadding="true">
                <LinearLayout
                    android:orientation="vertical"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">
                    <TextView
                        android:textStyle="bold"
                        android:text="@string/hourly_usage"
                        style="@style/normal_text"/>
                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/barChartTodayHome"
                        android:padding="8dp"
                        android:clickable="false"
                        android:layout_width="match_parent"
                        android:layout_height="196dp"
                        app:setTodayBarChartData="@{viewModel.appUsageToday}"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp"
                app:cardUseCompatPadding="true">
                <LinearLayout
                    android:orientation="vertical"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">
                    <TextView
                        android:textStyle="bold"
                        android:text="@string/daily_use_for_7days"
                        style="@style/normal_text"/>
                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/barChart7days"
                        android:padding="8dp"
                        android:clickable="false"
                        android:layout_width="match_parent"
                        android:layout_height="196dp"
                        app:setWeekBarChartData="@{viewModel.appUsage7Days}"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>
</layout>